<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_favorite"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:visibility="visible"
        android:src="@drawable/ic_favorite_white"
        android:contentDescription="@string/favorite"
        app:fabSize="normal"
        app:layout_anchor="@id/detail_layout"
        app:layout_anchorGravity="bottom|end" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frame_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:contentDescription="@string/imageview_of_backdrop"
                    android:scaleType="fitXY"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/iv_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:contentDescription="@string/imageview_of_gradient"
                    android:src="@drawable/gradient_transparent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="6dp">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/imageview_of_backdrop"
                        tools:ignore="ImageContrastCheck"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextColor.Black.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_image"
                tools:text="Title" />

            <LinearLayout
                android:id="@+id/linear_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gray_400"
                    app:strokeWidth="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <ImageView
                            android:id="@+id/iv_calendar"
                            style="@style/Icon.Large"
                            android:layout_marginEnd="2dp"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_calendar" />

                        <TextView
                            android:id="@+id/release_title"
                            style="@style/TextColor.Gray.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_calendar"
                            android:text="@string/release"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_date"
                            style="@style/TextColor.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/release_title"
                            android:layout_marginTop="1dp"
                            android:layout_toEndOf="@id/iv_calendar"
                            tools:text="01/01/2021" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gray_400"
                    app:strokeWidth="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <ImageView
                            android:id="@+id/iv_duration"
                            style="@style/Icon.Large"
                            android:layout_marginEnd="2dp"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_clock" />

                        <TextView
                            android:id="@+id/duration_title"
                            style="@style/TextColor.Gray.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_duration"
                            android:text="@string/duration"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_duration"
                            style="@style/TextColor.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/duration_title"
                            android:layout_marginTop="1dp"
                            android:layout_toEndOf="@id/iv_duration"
                            tools:text="60h 60m" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gray_400"
                    app:strokeWidth="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <ImageView
                            android:id="@+id/iv_rating"
                            style="@style/Icon.Large"
                            android:layout_marginEnd="2dp"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_star_black" />

                        <TextView
                            android:id="@+id/rating_title"
                            style="@style/TextColor.Gray.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_rating"
                            android:text="@string/rating"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_rating"
                            style="@style/TextColor.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rating_title"
                            android:layout_marginTop="1dp"
                            android:layout_toEndOf="@id/iv_rating"
                            tools:text="9.0 / 10" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <TextView
                android:id="@+id/overview_title"
                style="@style/TextColor.Black.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_info" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextColor.Black.SemiMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_title"
                tools:text="@string/lorem_ipsum" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>